<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group />
    <item
        android:id="@+id/navigation_private_photos"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/title_private_photos" />

    <item
        android:id="@+id/navigation_public_photos"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_public_photos" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_profile" />

</menu>
