<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/profile_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Your Name here" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Username" />

                <TextView
                    android:id="@+id/txt_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0 numberOfFollowers" />

                <TextView
                    android:id="@+id/txt_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Following" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/about" />
    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />
    <TextView
        android:id="@+id/txt_joined_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/joined" />
    <TextView
        android:id="@+id/txt_joined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joined" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_views_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/txt_views_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/views" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_tags_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/txt_tags_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_geotags_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/txt_geotags_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfGeotags" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_faves_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/txt_faves_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfFaves" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_groups_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/txt_groups_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfGroups" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>